--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,67 +1,116 @@
 .main-header {
-    background-color: $header-bg;
-    padding: 24px 0;
+	background-color: $header-bg;
+	padding: 16.5px 0;
+	position: relative;
 
-    .header-cont {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+	.header-cont {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
 
-        &__logo-cont {
-            display: flex;
-            align-items: center;
-            gap: 12px;
-        }
+		&__logo-cont {
+			display: flex;
+			align-items: center;
+			gap: 12px;
 
-        &__logo-img {
-            width: 56.27px;
-            max-height: auto;
-        }
+			@include smallDeviceSize {
+				margin-left: 1rem;
+			}
+		}
 
-        &__logo-name {
-            font-weight: 300;
-            font-size: 1.5rem;
-            line-height: 1.8rem;
-            margin-bottom: 4px;
-        }
-        &__logo-description{
-            font-weight: 200;
-            line-height: 1.2rem;
+		&__logo-img {
+			width: 2.875rem;
+			max-height: auto;
+		}
 
-        }
-        &__nav-cont{
-        }
+		&__logo-name {
+			font-weight: 300;
+			font-size: 1.25rem;
+			line-height: 1.5625rem;
+			margin-bottom: 0.25rem;
+		}
+		&__logo-description {
+			font-weight: 200;
+			line-height: 1.09375rem;
+			font-size: 0.875rem;
+		}
 
-        &__nav {
-            display: flex;
-            gap: 15px;
+		&__nav-cont {
+			@include smallDeviceSize {
+				position: absolute;
+				top: 100%;
+				background-color: $header-bg;
+				width: 100%;
+				border-top: 0.1rem solid rgba($color: #000000, $alpha: 0.1);
+				transform-origin: top;
+				padding: 1rem;
+				z-index: 5;
+				transform: scale(0);
+				opacity: 0;
 
-            &-link {
-                font-weight: 200;
-                font-size: 0.875rem;
-                line-height: 1.05rem;
-                padding: 10px 20px;
-                border: 0.8px solid transparent;
-                white-space: nowrap;
+				box-shadow: 0px 4px 8px 0px #52759e40;
+			}
+		}
 
-                &--active {
-                    border-color: black;
-                    border-radius: 20px;
-                }
+		input:checked ~ .header-cont__nav-cont {
+			transform: scale(1);
+			opacity: 1;
+			transition: opacity 0.3s ease-in-out;
+		}
 
-                &--blue {
-                    font-weight: 300;
-                    padding: 0.625rem 1.875rem;
-                    border-radius: 20px;
-                    border: 1px solid $header-link-bg;
-                    
-                    &:hover{
-                        background-color: $header-bg;
-                        border: 1px solid $header-link-bg !important;
-                    }
-                }
+		& label {
+			font-size: 2rem;
+			cursor: pointer;
 
-            }
-        }
-    }
+			visibility: hidden;
+			opacity: 0;
+
+			@include smallDeviceSize {
+				opacity: 1;
+				visibility: visible;
+				margin-right: 30px;
+			}
+		}
+
+		&__nav {
+			display: flex;
+			gap: 15px;
+
+			@include smallDeviceSize {
+				margin: 1rem 0;
+				flex-direction: column;
+				gap: 2.5rem;
+			}
+
+			&-link {
+				font-weight: 200;
+				font-size: 0.875rem;
+				line-height: 1.05rem;
+				padding: 10px 20px;
+				border: 0.8px solid transparent;
+				white-space: nowrap;
+
+				@include smallDeviceSize {
+					font-size: 1.5rem;
+				}
+
+				&--active {
+					border-color: black;
+					border-radius: 20px;
+				}
+
+				&--blue {
+					font-weight: 300;
+					padding: 0.625rem 1.875rem;
+					border-radius: 20px;
+					border: 1px solid $header-link-bg;
+
+					&:hover {
+						background-color: $header-bg;
+						border: 1px solid $header-link-bg !important;
+					}
+				}
+			}
+		}
+	}
 }
