--- a/src/styles/blocks/hero.scss
+++ b/src/styles/blocks/hero.scss
@@ -6,10 +6,15 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+		margin: 0 auto;
     }
 
     &__img-cont {
         position: relative;
+
+		@include smallDeviceSize{
+			display: none;
+		}
 
         &::after,
         &::before {
@@ -71,6 +76,10 @@
         font-size: 2.25rem;
         line-height: 2.875rem;
         margin-top: 135px;
+
+		@include smallDeviceSize{
+			margin-top: 50px;
+		}
     }
 
     &__find-pet-butt {
@@ -80,6 +89,10 @@
         font-size: 1.5rem;
         padding: 0.75rem 3.75rem;
 
+		@include smallDeviceSize{
+			margin-top: 50px;
+		}
+
         &::after,
         &::before {
             content: "";
@@ -87,6 +100,8 @@
             background-repeat: no-repeat;
             width: 266.39px;
             z-index: 1;
+			pointer-events: none; 
+
         }
 
         &::after {
@@ -94,6 +109,11 @@
             bottom: 0;
             left: -425px;
             background-image: url("././assets/icons/drown-dog.svg");
+			@include smallDeviceSize{
+				scale: 0.3;
+				left: -180px;
+				top: -90px
+			}
         }
 
         &::before {
@@ -101,6 +121,11 @@
             bottom: 0;
             right: -425px;
             background-image: url("././assets/icons/drown-cat.svg");
+			@include smallDeviceSize{
+				scale: 0.3;
+				right: -185px;
+				top: -107px
+			}
         }
     }
 }
