--- a/src/styles/blocks/our-mission.scss
+++ b/src/styles/blocks/our-mission.scss
@@ -3,6 +3,10 @@
     display: flex;
     gap: 30px;
 
+	@include smallDeviceSize{
+		gap: 20px;
+	}
+
     h2 {
         font-size: 2.25rem;
         font-weight: 400;
@@ -43,6 +47,10 @@
     padding-top: 1.5625rem;
     max-width: 450px;
 
+	@include smallDeviceSize{
+		margin-right: 1px;
+	}
+	
     &__title {
         margin-bottom: 34px;
     }
@@ -65,6 +73,10 @@
             display: block;
             width: 55px;  //Есди поставить 24px он почему-то будет растягиваться только в высоту на 24, ширина будет маленькая. подбирал тыком
             height: 24px; 
+
+			@include smallDeviceSize{
+				display: none;
+			}
         }
     }
 }
