--- a/src/styles/blocks/pet-list-section.scss
+++ b/src/styles/blocks/pet-list-section.scss
@@ -34,12 +34,22 @@
 
 	&__pets-list {
 		display: grid;
-		grid-template-columns: repeat(3, 1fr);
+		grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); 
 		gap: 30px 45px;
+
+		@include smallDeviceSize {
+			grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); 
+			gap: 40px 30px;
+			margin: 0 auto; 
+		}
 	}
 
 	&__pet-item {
 		cursor: pointer;
+
+		@include smallDeviceSize {
+			margin: 0 auto; 
+		}
 	}
 
 	&__pet-img {
@@ -82,12 +92,11 @@
 		font-size: 3rem;
 	}
 
-	&__empty-pets{
+	&__empty-pets {
 		margin-top: 50px;
 		text-align: center;
 		font-size: 2.5rem;
 	}
-	
 
 	&__pet-description {
 		line-height: 1.375rem;
@@ -101,7 +110,6 @@
 		line-height: 22px;
 		cursor: pointer;
 
-
 		.filter-container {
 			position: absolute;
 			top: 38px;
@@ -114,7 +122,7 @@
 			box-shadow: 0px 4px 8px 0px #52759e40;
 		}
 
-		.filter-item-cont{
+		.filter-item-cont {
 			margin-top: 16px;
 		}
 
@@ -142,6 +150,11 @@
 .brief-list {
 	margin: 80px auto;
 
+	
+	@include smallDeviceSize {
+		width: 90%;
+	}
+
 	&__container {
 		display: flex;
 		justify-content: space-between;
@@ -154,5 +167,12 @@
 		line-height: 1.5625rem;
 		text-align: left;
 		padding: 0.75rem 3.75rem;
+		
+		@include smallDeviceSize {
+			padding: 0.5rem 3rem; 
+			white-space: nowrap;
+		}
 	}
 }
+
+
