fix: убрал неточности: невозможность открытия списка фильтров при нажатии кнопки
занимание карточек всей ширины если возможно

--- a/src/index.css
+++ b/src/index.css
@@ -518,7 +518,7 @@ img {
 }
 .pets-section__pets-list {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  grid-template-columns: repeat(3, minmax(350px, 1fr));
   gap: 30px 45px;
 }
 @media only screen and (max-width: 768px) {
