--- a/src/styles/blocks/pet-list-section.scss
+++ b/src/styles/blocks/pet-list-section.scss
@@ -34,7 +34,7 @@
 
 	&__pets-list {
 		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); 
+		grid-template-columns: repeat(3, minmax(350px, 1fr)); 
 		gap: 30px 45px;
 
 		@include smallDeviceSize {
