--- a/src/styles/blocks/card.scss
+++ b/src/styles/blocks/card.scss
@@ -246,6 +246,7 @@
         display: flex;
         flex-direction: column;
         gap: 12px;
+		max-width: 746px;
 
         p {
             font-size: 1.25rem;
